--- a/pet-clinic-web/src/main/resources/templates/vet/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vet/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Pet Clinic</title>
 </head>
 <body>
-<h1>Vet Page</h1>
+<h1 th:text="'List of Vets'">Vet Page</h1>
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>FirtsName</th>
+        <th>LastName</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet:${vets}">
+        <td th:text="${vet.getId()}">1</td>
+        <td th:text="${vet.firstName}"></td>
+        <td th:text="${vet.lastName}"></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
